tests/duarouter/function/skip_routing/invalid/testsuite.duarouter
# some routes are disconnected
gaps

# no calculation of new routes but detect defect route
gaps_alt

# some routes are disconnected
gaps_ignore

# some routes are disconnected
gaps_repair
